--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "bcrypt-nodejs": "^0.0.3",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "jwt-simple": "^0.5.6",
     "moment": "^2.30.1",
     "morgan": "^1.10.1",
