--- a/ParaServir-cody/.env
+++ b/ParaServir-cody/.env
@@ -1,27 +1,31 @@
 # ============================================
 # CONFIGURACIÓN PARA ParaServir API
-# Base de Datos: paraServir2
+# Base de Datos: paraservir
 # ============================================
 
-# Base de Datos PostgreSQL - Usando variables individuales (más confiable)
+# Base de Datos PostgreSQL 
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=paraServir2
+DB_NAME=paraservir
 DB_USER=postgres
-DB_PASSWORD=Valentina2003
+DB_PASSWORD=admin123
 
 # ============================================
-# JWT Secret (OBLIGATORIO)
+# JWT Secret
 # ============================================
-JWT_SECRET=GAG6F2dKgcO9tdu57JFaLbUGDAZV3sfzddcooPJqhGA=
+JWT_SECRET=Barderos2005.
 
 # ============================================
-# Resend API Key (OPCIONAL - Para emails)
+# Resend 
 # ============================================
-RESEND_API_KEY=
+RESEND_API_KEY=re_Wmmv3YF1_LXr5CyZNYFBnuYBnZQ11Jfau
+EMAIL_USER=codycabreraa@gmail.com
+EMAIL_PASSWORD=aosa qnjx uaah rdtq
+EMAIL_HOST=smtp.gmail.com
+
 
 # ============================================
-# Frontend URL (Para CORS)
+# Frontend URL
 # ============================================
 FRONTEND_URL=http://localhost:5173
 
@@ -34,3 +38,5 @@ NODE_ENV=development
 # Puerto del Servidor
 # ============================================
 PORT=3900
+
+
